--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 body {
     font-family: 'Poppins', sans-serif;
+
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -11,7 +14,7 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 120px;
 }
