--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .orange-color {
     color: orange;
 }
@@ -46,4 +50,35 @@ h1 {
     background-image: url(../images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experiences-area {
+    background-image: url(../images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+}
+
+.experiences-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+
+#web-dev-experience {
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon, green);
+    border-image-slice: 1;
+}
+
+#full-dev-experience {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p {
+    text-align: center;
 }
